Bug 1673132 - Remove "scrollbar-small" -moz-default-appearance value and replace its single use with scrollbar-width: thin. r=emilio
Differential Revision: https://phabricator.services.mozilla.com/D94673

--- a/toolkit/themes/osx/global/nativescrollbars.css
+++ b/toolkit/themes/osx/global/nativescrollbars.css
@@ -17,10 +17,9 @@ scrollbar[root="true"] {
   z-index: 2147483647; /* largest positive value of a signed 32-bit integer */
 }
 
-html|select[size]:not([size="0"]):not([size="1"]) > scrollbar,
-html|select[multiple] > scrollbar {
-  appearance: auto;
-  -moz-default-appearance: scrollbar-small;
+html|select[size]:not([size="0"]):not([size="1"]),
+html|select[multiple] {
+  scrollbar-width: thin;
 }
 
 @media all and (-moz-overlay-scrollbars) {
